2007-09-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-DPSeofill, -DPSfill, -DPSstroke):
	Clear the GNUstep path after operation.

2007-09-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Copy dash and clipping.
	* Source/cairo/CairoGState.m (-_setPath:): Clear the cairo path.

2007-09-05 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGGeneric.h: Add ivars for event time keeping.
	* Headers/x11/XGServer.h: Declare new event time keeping methods.
	* Source/x11/XGServerEvent.m (-setLastTime:, -lastTime): Implement
	new methods and use them to store event time.
	* Source/x11/XGServerWindow.m: Use these methods to get event time.
	
2007-09-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Add more checks for cairo status.

2007-09-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_checkStyle:, -windowlist): Use
	defScreen instead of 0.

2007-09-05 Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac,
	* configure: Move checking for Xrender extension.
	* Source/cairo/XGCairoXImageSurface.m: Add includefor config.h.
	Patch by Yen-Ju Chen <yjchenx@gmail.com>.
	
2007-09-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source\winlib\WIN32FontInfo.m (-coveredCharacterSet): Create the
	NSMutableCharacterSet to store the character ranges in.

2007-09-03 Nicolas Roard <nicolas@roard.com>

	* configure:
	* configure.ac: check that Xrender lib is present and add it to the
	link process. Only use Xrender for Cairo.
	* Source/cairo/XGCairoXImageSurface.m: use 32 bits surfaces when
	available, else stay with 24bits surface.
	* Source/cairo/CairoGState.m: some cleaning, and fixed the scrolling
	bug. 

2007-09-02 Nicolas Roard <nicolas@roard.com>

	* configure:
	* configure.ac:
	* config.h.in: added checking for Xrender extension
	* Source/x11/context.c: Now check for 32 bit surface + alpha channel
	* Source/cairo/XGCairoSurface.m: Modified to get the correct visual,
	not the default one